@@ -1,3 +1,8 @@
+2006-10-25  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_context.c (cr_clip)
+	(cr_clip_preserve): supported block.
+
 2006-10-22  NANKI Haruo <nanki@dotswitch.net>
 
 	* packages/cairo/ext/rb_cairo_path.c (cr_path_each): fixed
